# homeberry

./: .gitignore  .gitmodules  .rsync-filter  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  test.py
application/: gpio.py  main.py
application/modules/demo/: __init__.py
application/modules/gpio/: __init__.py
application/modules/musicbox/: __init__.py  player.py  setup.py  test_player.py  test_setup.py
application/modules/soundplayer/: player.py  test_player.py
config/: settings.toml
services/homeberry/: Makefile
services/homeberry/application/: main.py  slackit.py
services/homeberry/application/modules/demo/: __init__.py
services/homeberry/application/modules/gpio/: constants.py
services/homeberry/application/modules/slackpibot/: __init__.py
services/homeberry/application/modules/soundplayer/: __init__.py
services/homeberry/config/: settings.local.toml  settings.local.toml.example  settings.toml
services/homeberry/tests/: test_application.py
services/homeberry/tests/modules/musicbox/: test_setup.py
services/homeberry/tests/modules/soundplayer/: test_player.py
services/scripts/midi/: aconnect-find-client-id-from-label.sh  aconnect-onboot.sh
services/scripts/slackit/: onboot.sh  slackit.sh
services/slackit/: run.sh
tests/modules/soundplayer/: test_player.py
